Convert FluentIterable to Java 8 Stream after compilation errors on 17
Signed-off-by: Tim te Beek <tim.te.beek@jdriven.com>